Long dynamicStrings in profiler labels are replaced with "(too long)", should be cropped instead
Categories
(Core :: Gecko Profiler, defect, P2)
Tracking
()
Tracking | Status | |
---|---|---|
firefox78 | --- | fixed |
People
(Reporter: mstange, Assigned: mozbugz)
Details
Attachments
(1 file)
This came up in bug 1633318:
(In reply to Marco Bonardo [:mak] from bug 1633318 comment #3)
Unfortunately these are a bit unreadable because mozStorage #6 doesn't give any detail about which database was being accessed and why.
We do add info to the profiler as a marker in https://searchfox.org/mozilla-central/rev/54f965e51e4f77866bec42737978d40d4c1fdfc5/storage/mozStorageConnection.cpp#1102 but here I just see a "too long" string... maybe we should crop these strings to the maximum, so at least one part is visible and we can make a guess about the running query.
Reporter | ||
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Updated•5 years ago
|
Assignee | ||
Comment 1•5 years ago
|
||
If a label contains a dynamic string that's too long (512 characters or more), instead of just replacing it with "(too long)", we now cut it down to the maximum size, with an ellipsis at the end.
Added test for that in gtest. Also added nearby test for empty strings.
Comment 3•5 years ago
|
||
bugherder |
Description
•